--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.6",
