--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "rollup": "^4.44.1",
     "tailwindcss": "^4.0.6",
     "uuid": "^11.1.0"
   },
